# firstMag

./: FIRSTMAG_DOC_REVIEW_ADDENDUM.md  FIRSTMAG_FUNCTIONAL_DOCUMENTATION.md  FIRSTMAG_PARITY_SCOPE.json  FUNCTIONALITY_ANALYSIS.md  IMPLEMENTATION_PLAN.md  README.md  TASKS.md  TODO_PROGRESS.json  TODO_PROGRESS.txt  firstmag_e2e.db-shm  firstmag_e2e.db-wal  index.html  package-lock.json  package.json  sprint-tickets.md  tauri.build.vite.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  firstmag_e2e.db-shm  firstmag_e2e.db-wal  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/db/: firstmag.db
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: accounting_category_cmds.rs  advanced_tax_rate_cmds.rs  article_bom_cmds.rs  article_cmds.rs  article_code_cmds.rs  bank_cmds.rs  cashier_cmds.rs  country_cmds.rs  crm_cmds.rs  currency_cmds.rs  dashboard_cmds.rs  depot_cmds.rs  family_cmds.rs  fiscal_cmds.rs  gondola_cmds.rs  mod.rs  partner_cmds.rs  payment_method_cmds.rs  pos_cmds.rs  product_range_cmds.rs  rayon_cmds.rs  register_cmds.rs  report_cmds.rs  sale_cmds.rs  salesperson_cmds.rs  settings_cmds.rs  stock_cmds.rs  tariff_category_cmds.rs  unit_of_measure_cmds.rs  user_cmds.rs  wave6_cmds.rs
src-tauri/src/domain/: article.rs  crm.rs  document.rs  error.rs  mod.rs  partner.rs  pos.rs  reference.rs  report.rs  stock.rs  tax.rs  user.rs
src-tauri/src/fiscal/: commands.rs  mod.rs  protocol.rs
src-tauri/tests/: crud_sweep_tests.rs  domain_tests.rs
(+186 files in other folders)
